# wasi-lab

./: .gitignore  CMakeLists.txt  README.md
qjs-wasi/: CMakeLists.txt  README.md  build.sh  build.zig  wapm.toml  wasi-sdk.cmake
qjs-wasi/src/: qjs.c  quickjs-libc.c  quickjs.c  repl.c  repl.js
qjs-wasi/tools/: gencode.py
src/: duk_config.h  duktape.c  duktape.h
tools/build_duktape/: build.sh  config.yaml
wasiduk/: CMakeLists.txt  README.md  build.sh  wapm.toml  wasi-sdk.cmake
wasiduk/examples/: hello_world.js
wasiduk/src/: duk_config.h  duktape.c  duktape.h
wasiduk/tools/build_duktape/: build.sh
